# itad-api

./: Cargo.toml  README.md
src/: api.rs  auth.rs  client.rs  error.rs  lib.rs
src/api/: client.rs  collection.rs  common.rs  deals.rs  endpoint.rs  error.rs  game.rs  search.rs  stats.rs  user.rs  utils.rs  waitlist.rs  web.rs
