[package]
name = "itad-api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.50"
futures = "0.3.15"
log = "0.4.14"
reqwest = { version = "0.11.4", features = ["blocking", "json"]}
url = "2.2.2"
bytes = "1.0.1"
http = "0.2.4"
thiserror = "1.0.26"
serde = {version = "1", features = ["derive"]}
serde_json = "1.0.64"
serde_urlencoded = "0.7.0"
